# kuviewer

./: .dockerignore  .gitignore  AGENTS.md  CODEX_HANDOFF.md  Dockerfile  README.md  kubernetes-topology-viewer-plan.md
.github/workflows/: ci.yml  deploy-known-hosts-bootstrap.yml  deploy-preflight.yml  deploy-self-hosted.yml  deploy-ssh-endpoint-diagnostics.yml  deploy.yml  desktop-package.yml
deploy/: deploy-policy.json
deploy/gateway/: Caddyfile.kuviewer.example
deploy/kubernetes/: kuviewer.yaml
deploy/sample-infra/: gateway-api-demo.yaml  kuviewer-demo.yaml
deploy/standalone/: .env.example  docker-compose.yml
desktop/: BUILD_PREREQUISITES.md  KEYCHAIN_CREDENTIAL_DESIGN.md  README.md  package.json  packaging-spec.json
desktop/icons/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: desktop-readonly.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: K3S_VALIDATION.md  NEXT_WORK.md
docs/archive/: 2026-07-completed-work-summary.md
scripts/: build-desktop-sidecar.mjs  check-deploy-workflow.mjs  check-desktop-packaging-spec.mjs  check-ssh-banner.mjs  configure-desktop-signing.mjs  diagnose-ssh-endpoint.mjs  generate-desktop-icons.mjs  notify-telegram.mjs  prepare-deploy-known-hosts.mjs  set-desktop-package-version.mjs  smoke-desktop-cm-sessions.mjs  smoke-desktop-keychain-runtime.mjs  smoke-kubernetes-api.sh
server/: go.mod
website/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+223 files in other folders)
