[package]
name = "kuviewer-desktop"
version = "0.1.0"
description = "Read-only Kubernetes cluster explorer desktop shell"
authors = ["Kuviewer"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = []
